--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>Sidney</title>
+  </head>
+  
+  <a href="https://www.kodewithklossy.com">Kode With Klossy</a>
+  
+  
+</html>
 
