--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sidney</title>
   </head>
   
-  <a href="https://www.kodewithklossy.com">Kode With Klossy</a>
+  <a href="https://www.kodewithklossy.com">Kode with Klossy</a>
   
   
 </html>
